# wrenbugger

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  example.wren  readme.md  wrenbugger-instructions.md
_codeql_build_dir/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  compile_commands.json
_codeql_build_dir/code/: wrenbugger
_codeql_build_dir/executable/: wrenbugger
code/: CMakeLists.txt  debugger_ui.cpp  debugger_ui.h  main.cpp  wren_interface.cpp  wren_interface.h
code/include/: debugger.hpp  display.hpp  ui.hpp  wren_vm.hpp
code/source/: debugger.cpp  display.cpp  main.cpp  ui.cpp  wren_vm.cpp
examples/: simple.wren  test.wren
